2018-08-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawImage): Add missing error-reporting logic
	to return immediately upon memory reallocation failure.  Apply
	memory resource limits to PrimitiveInfo array allocation.  Fixes
	oss-fuzz 9576 "graphicsmagick/coder_MVG_fuzzer: Null-dereference
	READ in DrawImage", oss-fuzz 9593
	"graphicsmagick/coder_MVG_fuzzer: Out-of-memory in
	graphicsmagick_coder_MVG_fuzzer", oss-fuzz 9648
	"graphicsmagick/coder_MVG_fuzzer: Unknown signal in
	DrawImage". (Credit to OSS-Fuzz)

2018-08-16  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coder/mat.c Explicitly reject non-seekable streams.

2018-08-15  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coder/mat.c Correctly check GetBlobSize(image) even for zipstreams.

2018-08-14  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/mat.c More aggresive data corruption checking.

2018-08-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xbm.c (XBMInteger): Limit the number of hex digits parsed
	to avoid signed integer overflow.  Fixes oss-fuzz 9746
	"graphicsmagick/coder_XBM_fuzzer: Undefined-shift in
	XBMInteger". (Credit to OSS-Fuzz)

2018-08-07  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/mat.c Typecast difference to quantum.

2018-08-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/mat.c (InsertComplexFloatRow): Avoid signed
	overflow. Fixes oss-fuzz 9667 "graphicsmagick/coder_MAT_fuzzer:
	Integer-overflow in InsertComplexFloatRow". (Credit to OSS-Fuzz)

	* coders/xbm.c (ReadXBMImage): Add validations for row and column
	dimensions.  Fixes oss-fuzz 9736 "graphicsmagick/coder_XBM_fuzzer:
	Out-of-memory in graphicsmagick_coder_XBM_fuzzer". (Credit to
	OSS-Fuzz)

2018-08-04  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/wpg.c Add mechanism to approve embedded subformats in
	WPG.  This should mute oss-fuzz 9559.  (Credit to OSS-Fuzz)

2018-07-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
