@@ -38,6 +38,12 @@
 <p>2018-08-19  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/utility.c (MagickAtoFChk): Add additional validation
+checks for floating point values.  NAN and +/- INFINITY values
+also map to 0.0. Fixes oss-fuzz 9630
+&quot;graphicsmagick/coder_MVG_fuzzer: Integer-overflow in
+IsNexusInCore&quot; and oss-fuzz 9612 &quot;graphicsmagick/coder_MVG_fuzzer:
+Integer-overflow in SetCacheNexus&quot;. (Credit to OSS-Fuzz)</li>
 <li>magick/render.c (DrawImage): Add missing error-reporting logic
 to return immediately upon memory reallocation failure.  Apply
 memory resource limits to PrimitiveInfo array allocation.  Fixes
